2011-08-18    <jin@localhost.localdomain>

	* test.cgi (Foo#parse): detached of "url" and rhel6 depend array from test.cgi to cofig/ directory.

2011-08-12    <jin@localhost.localdomain>

	* test.cgi (Foo#fw_post): fix firewall parsing routine.

2011-08-04    <jin@localhost.localdomain>

	* test.cgi (Foo#parse): addselinux.
	
	
2011-08-03  jin  <jin@sango.endure.ddo.jp>

	* test.cgi (Foo#main): add %post section generator method.

2011-08-02    <jin@localhost.localdomain>

	* list.html: add SELinux configuration

	* test.cgi (Foo#part): add clearpart.
	(Foo#part): change modify flag from checkbox to select field.


2011-08-01    <jin@localhost.localdomain>

	* list.html: rename odd param.

	* test.cgi (Foo#parse2): ディスクパーティション設定を追加。
	ちゃんとエラーチェックしなきゃ

	* list.html: add disk0.nomodify flag

2011-07-29    <jin@localhost.localdomain>

	* list.html: base packages are selected by default.
	add stylesheet.
	add disk0 partition table difinition.

	* test.cgi: add firewall parse routine.
