@@ -1,3 +1,7 @@
+2011-09-02    <jin@localhost.localdomain>
+
+	* list.html: add eth0 table(ipv4 only)x
+
 2011-08-18    <jin@localhost.localdomain>
 
 	* test.cgi (Foo#parse): detached of "url" and rhel6 depend array from test.cgi to cofig/ directory.
